Change the interface from ros1 to ros2 and adapt to the mid360

--- a/package.xml
+++ b/package.xml
@@ -1,54 +1,18 @@
 <?xml version="1.0"?>
-<package>
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>lio_livox</name>
   <version>0.0.0</version>
+  <description>TODO: Package description</description>
+  <maintainer email="123456789@qq.com">developer</maintainer>
+  <license>TODO: License declaration</license>
 
-  <description>
-    LIO-Livox
-  </description>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <maintainer email="dev@livoxtech.com">livox</maintainer>
-
-  <license>BSD</license>
-
-  <author email="dev@livoxtech.com">livox</author>
-  
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>message_generation</build_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>livox_ros_driver</build_depend>
-  <build_depend>tf_conversions</build_depend>
-  <build_depend>eigen_conversions</build_depend>
-  <build_depend>pcl_conversions</build_depend>
-  <build_depend>pcl_ros</build_depend>
-  <build_depend>message_filters</build_depend>
-  <build_depend>std_srvs</build_depend>
-
-  <run_depend>message_runtime</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>livox_ros_driver</run_depend>
-  <run_depend>tf_conversions</run_depend>
-  <run_depend>eigen_conversions</run_depend>
-  <run_depend>pcl_conversions</run_depend>
-  <run_depend>pcl_ros</run_depend>
-  <run_depend>message_filters</run_depend>
-  <run_depend>std_srvs</run_depend>
-
-  <test_depend>rostest</test_depend>
-  <test_depend>rosbag</test_depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
